Show SnackBar when adding/deleting to/from favorites

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="share_message">"Hey checkout these awesome lyrics by %1$s: %2$s"</string>
     <string name="song_error_message">Cannot load this song</string>
     <string name="song_favorite_deleted">Song removed from favorites</string>
+    <string name="song_favorite_added">Song added to favorites</string>
 
 </resources>
